# cache

./: CMakeLists.txt  README.md
.cache/clangd/index/: cache.cc.8C105027FEB10F9D.idx  cache.cc.E7B2315AB1045A9E.idx  cache.h.49283F44B9F0686A.idx  cache.h.4C231515D66A109B.idx  cache_test.cc.2F12DEEA632D7B3E.idx  cache_test.cc.CA443F93014F3D0D.idx  gmock-actions.h.35AD55D05772FC20.idx  gmock-actions.h.ED84AC9D44B61EB0.idx  gmock-all.cc.20AC3C5F94C6F822.idx  gmock-all.cc.CECA5286F21370BD.idx  gmock-cardinalities.cc.CF2C1278545CF45B.idx  gmock-cardinalities.cc.D174E128D443D5B0.idx  gmock-cardinalities.h.376C969E7E10C8C6.idx  gmock-cardinalities.h.4134D5CCDED6C476.idx  gmock-function-mocker.h.12F15E305B0B2A58.idx  gmock-function-mocker.h.F7355B0A40E7B1E9.idx  gmock-generated-actions.h.356D2236674BA513.idx  gmock-generated-actions.h.E1579023C03AC82F.idx  gmock-internal-utils.cc.554DE8EDD7EF481A.idx  gmock-internal-utils.cc.CB6511BC5B8365E0.idx  gmock-internal-utils.h.1E5DF47C91157AA5.idx  gmock-internal-utils.h.EAD61C866AA88640.idx  gmock-matchers.cc.301808445C3A52E3.idx  gmock-matchers.cc.E046977B8F73DFAD.idx  gmock-matchers.h.1EE0FAF27163C5FE.idx  gmock-matchers.h.59E509C04D37A81C.idx  gmock-matchers.h.9E70985AF40B7491.idx  gmock-matchers.h.D768EF7E7FEEB6DE.idx  gmock-more-actions.h.5235292DB81338DE.idx  gmock-more-actions.h.D6AFCCA0F2D5869E.idx  gmock-more-matchers.h.01157B379A06AE47.idx  gmock-more-matchers.h.CB326EF53BDBB7B1.idx  gmock-nice-strict.h.E7B188D8C9FDE302.idx  gmock-nice-strict.h.F319508C174D352B.idx  gmock-port.h.36C9C07201E0FCC1.idx  (+97 more)
include/: cache.h  perfect_cache.h
src/: CMakeLists.txt  cache.cc  perfect_cache.cc
src/.cache/clangd/index/: ideal_cache.cc.BDB9A2766C70AEA0.idx
tests/: CMakeLists.txt  cache_test.cc  perfect_cache_test.cc  tests.sh
tests/test_implementation/: test_imp.h
